--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -9232,7 +9232,7 @@ textarea.input {
     
     .service-list-heading {
     
-        @apply container;
+        //@apply container;
     
         h2 {
             @apply text-4xl leading-normal;
