--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -849,9 +849,9 @@ select {
 
         opacity: 0.2;
 
-        @media only screen and (max-width: 999px) {
-                transform: scale(5);
-        }
+        // @media only screen and (max-width: 999px) {
+        //         transform: scale(5);
+        // }
 
         #bg-wrap {
                 @media only screen and (max-width: 999px) {
