--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -677,7 +677,11 @@ label {
                                 bottom: 0;
                                 width: 30%;
                                 z-index: 1;
-                                background: linear-gradient(270deg, rgba(0, 26, 42, 0) 0%, rgba(0, 26, 42, 0.5382528011204482) 17%, rgba(0, 26, 42, 0.7343312324929971) 36%, rgba(0, 26, 42, 0.958420868347339) 62%, rgba(0, 26, 42, 1) 100%);
+                                background: rgb(21,42,55);
+                                background: -moz-linear-gradient(267deg, rgba(21,42,55,0) 0%, rgba(21,42,55,0.9192051820728291) 52%, rgba(21,42,55,1) 100%);
+                                background: -webkit-linear-gradient(267deg, rgba(21,42,55,0) 0%, rgba(21,42,55,0.9192051820728291) 52%, rgba(21,42,55,1) 100%);
+                                background: linear-gradient(267deg, rgba(21,42,55,0) 0%, rgba(21,42,55,0.9192051820728291) 52%, rgba(21,42,55,1) 100%);
+                                filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#152a37",endColorstr="#152a37",GradientType=1);
                         }
 
                         &:before {
@@ -689,7 +693,11 @@ label {
                                 bottom: 0;
                                 width: 30%;
                                 z-index: 2;
-                                background: linear-gradient(90deg, rgba(0, 26, 42, 0) 0%, rgba(0, 26, 42, 0.5382528011204482) 17%, rgba(0, 26, 42, 0.7343312324929971) 36%, rgba(0, 26, 42, 0.958420868347339) 62%, rgba(0, 26, 42, 1) 100%);
+                                background: rgb(21,42,55);
+                                background: -moz-linear-gradient(90deg, rgba(21,42,55,0) 0%, rgba(21,42,55,0.9192051820728291) 52%, rgba(21,42,55,1) 100%);
+                                background: -webkit-linear-gradient(90deg, rgba(21,42,55,0) 0%, rgba(21,42,55,0.9192051820728291) 52%, rgba(21,42,55,1) 100%);
+                                background: linear-gradient(90deg, rgba(21,42,55,0) 0%, rgba(21,42,55,0.9192051820728291) 52%, rgba(21,42,55,1) 100%);
+                                filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#152a37",endColorstr="#152a37",GradientType=1);
                         }
                 }
         }
@@ -855,7 +863,7 @@ select {
 
         #bg-wrap {
                 @media only screen and (max-width: 999px) {
-                        transform: scale(6);
+                        transform: scale(10);
                 }
         }
 
@@ -10690,3 +10698,15 @@ textarea.input {
                 background-color:transparent !important;
         }
 }
+
+// .video-hero{
+      
+//                 position: absolute;
+// left: 0;
+// right: 0;
+// bottom: 0;
+// top: 0;
+// opacity: 0.1;
+// filter: grayscale(1);
+           
+// }
