--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -20,8 +20,8 @@
 body {
         margin: 0 !important;
         padding: 0 !important;
-        // background: $PC;
-        // color: $WHITE;
+        background: $PC;
+        color: $WHITE;
         font-family: 'Helvetica Now Text';
 
         overscroll-behavior-y: none;
