--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -10315,7 +10315,7 @@ textarea.input {
             }
             
             .wrpr{
-                @apply w-11/12 mx-auto grid gap-8;
+                @apply sm:w-11/12 mx-auto grid gap-8;
             }
             .inner{
                
