--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -9144,7 +9144,7 @@ textarea.input {
 }
 
 .hero-home {
-  @apply sm:min-h-screen min-h-[80vh] flex items-end sm:py-24 py-[30px] overflow-hidden relative;
+  @apply sm:min-h-screen min-h-[75vh] sm:pt-0 pt-[150px] flex items-end sm:py-24 py-[30px] overflow-hidden relative;
 }
 .hero-home h2 {
   @apply lg:text-[3.5rem] md:text-[4rem] sm:text-[3rem] text-[2rem] leading-tight;
