--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -10792,13 +10792,13 @@ textarea.input {
       }
       
 
-      .hero-lp:after{
-        content:'';
-        display:block;
-        position:fixed;
-        left:0;
-        right:0;
-        top:0;
-        bottom:0;
-        background:#031e2de8;
-      }
+//       .hero-lp:after{
+//         content:'';
+//         display:block;
+//         position:fixed;
+//         left:0;
+//         right:0;
+//         top:0;
+//         bottom:0;
+//         background:#031e2de8;
+//       }
