form css updated

--- a/public/styles/globals.css
+++ b/public/styles/globals.css
@@ -10306,3 +10306,8 @@ textarea.input {
 .hero-slide.fade-out {
   opacity: 0;
 }
+
+.input-custom {
+  @apply bg-transparent border border-[#72d3ff38] rounded-md p-[20px] hover:border-[#55caff5c] focus:border-[#55caff5c] transition-all;
+  /* Adjust padding if necessary */
+}
